# api.yaml
@@ -3,13 +3,28 @@ info:
   description: Mô tả về API...
   version: 1.0.1
   title: "by truong"
+tags:
+- name: "Service"
+  description: "Everything about your Service"
+- name: "Order"
+  description: "Everything about your Order"
+- name: "Store"
+  description: "Everything about your Store"
+
+  # externalDocs:
+  #   description: "Find out more about our store"
+  #   url: "http://swagger.io"
+# schemes:
+# - "https"
+# - "http"
 
 
 # Service
-
 paths:
   /api/Service:
     get:
+      tags:
+      - "Service"
       summary: Lấy danh sách Dịch vụ
       responses: 
         "200":
@@ -17,6 +32,8 @@ paths:
         "400":
           description: Không lấy được danh sách Dịch vụ
     post:
+      tags:
+      - "Service"    
       summary: Thêm Dịch vụ
       responses:
         "200":
@@ -29,14 +46,11 @@ paths:
         schema: 
           $ref: "#/components/schemas/Service"
 
-
-
-
-
   /api/Service/{id}:
     get:
+      tags:
+      - "Service"
       summary: Tìm Dịch vụ theo id
-          tags: [Find service]
       parameters:
         - in: path
           name: id
@@ -57,6 +71,8 @@ paths:
         '404':
           description: Không tìm thấy dịch vụ
     put:
+      tags:
+      - "Service"
       summary: " update dịch vụ"
       description: ""
       operationId: "updateService"
@@ -82,6 +98,8 @@ paths:
           description: Không tìm thấy dịch vụ
 
     delete:
+      tags:
+      - "Service"
       summary: "xóa sản phẩm theo id"
       description: ""
       operationId: ""
@@ -94,24 +112,243 @@ paths:
         schema:
           type: string
         required: true
-        description: The book id
+        description: ""
       responses:
         "400":
-          description: "Invalid ID supplied"
+          description: "id không hợp lệ"
         "404":
-          description: "Pet not found"
+          description: "Không tìm thấy dịch vụ"
+      security:
+      - petstore_auth:
+        - "write:pets"
+        - "read:pets"
+
+# End Service -----------------------------------------------------------------------------------------------------------------------------
+
+
+
+# Order 
+
+  /api/Order:
+    get:
+      tags:
+      - "Order"
+      summary: Lấy danh sách đặt dịch vụ
+      responses: 
+        "200":
+          description: Lấy danh sách đặt Dịch vụ thành công
+        "400":
+          description: Không lấy được danh sách đặt Dịch vụ      
+    post:
+      tags:
+      - "Order"    
+      summary: Thêm Dịch vụ
+      responses:
+        "200":
+          description: Thêm danh sách Dịch vụ thành công
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Bắt buộc phải có các trường giống bên dưới"
+        required: true
+        schema: 
+          $ref: "#/components/schemas/Order"
+
+  /api/Order/{id}:
+    get:
+      tags:
+      - "Order"
+      summary: Tìm Dịch vụ theo id
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+      responses:
+        '200':
+          description: tìm Dịch vụ thành công
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Order'          
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Order'
+        '400':
+          description: id không hợp lệ
+        '404':
+          description: Không tìm thấy dịch vụ
+    put:
+      tags:
+      - "Order"
+      summary: " update dịch vụ"
+      description: ""
+      operationId: "updateOrder"
+      produces:
+      - "application/xml"
+      - "application/json"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "điền id dịch vụ cần cập nhật"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "body"
+        description: "cập nhật theo các trường dưới đây"
+        required: true
+        schema:
+          $ref: '#/components/schemas/Order'
+      responses:
+        '400':
+          description: id không hợp lệ
+        '404':
+          description: Không tìm thấy dịch vụ
+
+    delete:
+      tags:
+      - "Order"
+      summary: "xóa sản phẩm theo id"
+      description: ""
+      operationId: ""
+      produces:
+      - "application/xml"
+      - "application/json"
+      parameters:
+      - in: path
+        name: id
+        schema:
+          type: string
+        required: true
+        description: ""
+      responses:
+        "400":
+          description: "id không hợp lệ"
+        "404":
+          description: "Không tìm thấy dịch vụ"
       security:
       - petstore_auth:
         - "write:pets"
         - "read:pets"
 
 
+#  End Order -----------------------------------------------------------------------------------------------------------------------------
 
+
+
+
+# Service Step 
+
+  /api/service-step:
+    get:
+      tags:
+      - "ServiceStep"
+      summary: Lấy danh sách đặt dịch vụ
+      responses: 
+        "200":
+          description: Lấy danh sách đặt Dịch vụ thành công
+        "400":
+          description: Không lấy được danh sách đặt Dịch vụ      
+    post:
+      tags:
+      - "ServiceStep"    
+      summary: Thêm Dịch vụ
+      responses:
+        "200":
+          description: Thêm danh sách Dịch vụ thành công
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Bắt buộc phải có các trường giống bên dưới"
+        required: true
+        schema: 
+          $ref: "#/components/schemas/ServiceStep"
+
+  /api/service-step/{id}:
+    get:
+      tags:
+      - "ServiceStep"
+      summary: Tìm Dịch vụ theo id
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+      responses:
+        '200':
+          description: tìm Dịch vụ thành công
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ServiceStep'          
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/ServiceStep'
+        '400':
+          description: id không hợp lệ
+        '404':
+          description: Không tìm thấy dịch vụ
+    put:
+      tags:
+      - "ServiceStep"
+      summary: " update dịch vụ"
+      description: ""
+      operationId: "updateServiceStep"
+      produces:
+      - "application/xml"
+      - "application/json"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "điền id dịch vụ cần cập nhật"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "body"
+        description: "cập nhật theo các trường dưới đây"
+        required: true
+        schema:
+          $ref: '#/components/schemas/ServiceStep'
+      responses:
+        '400':
+          description: id không hợp lệ
+        '404':
+          description: Không tìm thấy dịch vụ
+
+    delete:
+      tags:
+      - "ServiceStep"
+      summary: "xóa sản phẩm theo id"
+      description: ""
+      operationId: ""
+      produces:
+      - "application/xml"
+      - "application/json"
+      parameters:
+      - in: path
+        name: id
+        schema:
+          type: string
+        required: true
+        description: ""
+      responses:
+        "400":
+          description: "id không hợp lệ"
+        "404":
+          description: "Không tìm thấy dịch vụ"
+      security:
+      - petstore_auth:
+        - "write:pets"
+        - "read:pets"
+
+
+#  End Service Step -----------------------------------------------------------------------------------------------------------------------------
 
 
 # Models
 components:
   schemas:
+  # Service
     Service:
       properties:
         name:
@@ -139,9 +376,47 @@ components:
         - duration
         - status
         - store_id
-
-
 # End Service
 
+
+
+#  Order
+    Order:
+      properties:
+        dateStart:
+          type: string
+        infoUser:
+          type: string
+        status:
+          type: integer
+        # user_id:
+        #   type: string
+        service_id:
+          type: integer
+
+      required:
+        - dateStart
+        - infoUser
+        - status
+        # - user_id
+        - service_id
+#  End Order
+
+
+#  ServiceStep
+    ServiceStep:
+      properties:
+        title:
+          type: string
+        desc:
+          type: string
+        service_id:
+          type: string
+
+      required:
+        - title
+        - desc
+        - type
+#  End ServiceStep
 
  
